--- a/l3experimental/l3str/l3regex.dtx
+++ b/l3experimental/l3str/l3regex.dtx
@@ -731,7 +731,7 @@
 %<*package>
 \ProvidesExplPackage{l3regex}{2017/04/01}{}
   {L3 Experimental regular expressions}
-\RequirePackage{l3tl-build, l3tl-analysis, l3array}
+\RequirePackage{l3tl-build, l3tl-analysis, l3intarray}
 %</package>
 %    \end{macrocode}
 %
@@ -782,7 +782,7 @@
 %     unique id for all the steps of the matching algorithm.
 % \end{itemize}
 %
-% We use \pkg{l3array} to manipulate arrays of integers (stored into
+% We use \pkg{l3intarray} to manipulate arrays of integers (stored into
 % some dimension registers in scaled points).  We also abuse \TeX{}'s
 % \tn{toks} registers, by accessing them directly by number rather than
 % tying them to control sequence using the \tn{newtoks} allocation
@@ -792,25 +792,25 @@
 % \tn{toks}\meta{state} holds the tests and actions to perform in the
 % \meta{state} of the \textsc{nfa}.  When matching,
 % \begin{itemize}
-%   \item \cs{g_@@_state_active_array} holds the last \meta{step} in
+%   \item \cs{g_@@_state_active_intarray} holds the last \meta{step} in
 %     which each \meta{state} was active.
-%   \item \cs{g_@@_thread_state_array} maps each \meta{thread} (with
+%   \item \cs{g_@@_thread_state_intarray} maps each \meta{thread} (with
 %     $\texttt{min_active} \leq \meta{thread} < \texttt{max_active}$) to
 %     the \meta{state} in which the \meta{thread} currently is. The
 %     \meta{threads} or ordered starting from the best to the least
 %     preferred.
 %   \item \tn{toks}\meta{thread} holds the submatch information for the
 %     \meta{thread}, as the contents of a property list.
-%   \item \cs{g_@@_charcode_array} and \cs{g_@@_catcode_array} hold the
+%   \item \cs{g_@@_charcode_intarray} and \cs{g_@@_catcode_intarray} hold the
 %     character codes and category codes of tokens at each
 %     \meta{position} in the query.
-%   \item \cs{g_@@_balance_array} holds the balance of begin-group and
+%   \item \cs{g_@@_balance_intarray} holds the balance of begin-group and
 %     end-group character tokens which appear before that point in the
 %     token list.
 %   \item \tn{toks}\meta{position} holds \meta{tokens} which \texttt{o}-
 %     and \texttt{x}-expand to the \meta{position}-th token in the query.
-%   \item \cs{g_@@_submatch_prev_array}, \cs{g_@@_submatch_begin_array}
-%     and \cs{g_@@_submatch_end_array} hold, for each submatch (as would
+%   \item \cs{g_@@_submatch_prev_intarray}, \cs{g_@@_submatch_begin_intarray}
+%     and \cs{g_@@_submatch_end_intarray} hold, for each submatch (as would
 %     be extracted by \cs{regex_extract_all:nnN}), the place where the
 %     submatch started to be looked for and its two end-points.  For
 %     historical reasons, the minimum index is twice \texttt{max_state},
@@ -885,16 +885,16 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\g_@@_charcode_array, \g_@@_catcode_array, \g_@@_balance_array}
+% \begin{variable}{\g_@@_charcode_intarray, \g_@@_catcode_intarray, \g_@@_balance_intarray}
 %   The first thing we do when matching is to go once through the query
 %   token list and store the information for each token into
-%   \cs{g_@@_charcode_array}, \cs{g_@@_catcode_array} and \tn{toks}
+%   \cs{g_@@_charcode_intarray}, \cs{g_@@_catcode_intarray} and \tn{toks}
 %   registers.  We also store the balance of begin-group/end-group
-%   characters into \cs{g_@@_balance_array}.
+%   characters into \cs{g_@@_balance_intarray}.
 %    \begin{macrocode}
-\__array_new:Nn \g_@@_charcode_array { 65536 }
-\__array_new:Nn \g_@@_catcode_array { 65536 }
-\__array_new:Nn \g_@@_balance_array { 65536 }
+\__intarray_new:Nn \g_@@_charcode_intarray { 65536 }
+\__intarray_new:Nn \g_@@_catcode_intarray { 65536 }
+\__intarray_new:Nn \g_@@_balance_intarray { 65536 }
 %    \end{macrocode}
 % \end{variable}
 %
@@ -4159,7 +4159,7 @@
 % transitions, the instruction at the new state of the \textsc{nfa} is
 % performed immediately.  When a transition consumes a character, the
 % new state is appended to a list of \enquote{active states}, stored in
-% \cs{g_@@_thread_state_array}: this thread will be active again when the next
+% \cs{g_@@_thread_state_intarray}: this thread will be active again when the next
 % token is read from the query.  At every step (for each token in the
 % query), we unpack that list of active states and the corresponding
 % submatch props, and empty those.
@@ -4271,13 +4271,13 @@
 % \begin{variable}{\l_@@_step_int}
 %   This integer, always even, is increased every time a character in
 %   the query is read, and not reset when doing multiple matches.  We
-%   store in \cs{g_@@_state_active_array} the last step in which each
+%   store in \cs{g_@@_state_active_intarray} the last step in which each
 %   \meta{state} in the \textsc{nfa} was encountered. This lets us break
 %   infinite loops by not visiting the same state twice in the same
 %   step. In fact, the step we store is equal to \texttt{step} when we
 %   have started performing the operations of \tn{toks}\meta{state}, but
 %   not finished yet. However, once we finish, we store
-%   $\text{\texttt{step}}+1$ in \cs{g_@@_state_active_array}.  This is
+%   $\text{\texttt{step}}+1$ in \cs{g_@@_state_active_intarray}.  This is
 %   needed to track submatches
 %   properly (see building phase). The \texttt{step} is also used to
 %   attach each set of submatch information to a given iteration (and
@@ -4289,7 +4289,7 @@
 %
 % \begin{variable}{\l_@@_min_active_int, \l_@@_max_active_int}
 %   All the currently active threads are kept in order of precedence in
-%   \cs{g_@@_thread_state_array}, and the corresponding submatches in the
+%   \cs{g_@@_thread_state_intarray}, and the corresponding submatches in the
 %   \tn{toks}. For our purposes, those serve as an array, indexed from
 %   \texttt{min_active} (inclusive) to \texttt{max_active} (excluded).
 %   At the start of every step, the whole array is unpacked, so that the
@@ -4301,14 +4301,14 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\g_@@_state_active_array, \g_@@_thread_state_array}
-%   \cs{g_@@_state_active_array} stores the last \meta{step} in which
-%   each \meta{state} was active.  \cs{g_@@_thread_state_array} stores
+% \begin{variable}{\g_@@_state_active_intarray, \g_@@_thread_state_intarray}
+%   \cs{g_@@_state_active_intarray} stores the last \meta{step} in which
+%   each \meta{state} was active.  \cs{g_@@_thread_state_intarray} stores
 %   threads that will be considered in the next step, more precisely the
 %   states in which these threads are.
 %    \begin{macrocode}
-\__array_new:Nn \g_@@_state_active_array { 65536 }
-\__array_new:Nn \g_@@_thread_state_array { 65536 }
+\__intarray_new:Nn \g_@@_state_active_intarray { 65536 }
+\__intarray_new:Nn \g_@@_thread_state_intarray { 65536 }
 %    \end{macrocode}
 % \end{variable}
 %
@@ -4374,7 +4374,7 @@
 %   \cs{@@_query_set:nnn}). Then initialize the variables that should
 %   be set once for each user function (even for multiple
 %   matches). Namely, the overall matching is not yet successful; none of
-%   the states should be marked as visited (\cs{g_@@_state_active_array}), and
+%   the states should be marked as visited (\cs{g_@@_state_active_intarray}), and
 %   we start at step $0$; we pretend that there was a previous match
 %   ending at the start of the query, which was not empty (to avoid
 %   smothering an empty match at the start). Once all this is set up, we
@@ -4396,7 +4396,7 @@
     \bool_gset_false:N \g_@@_success_bool
     \int_step_inline:nnnn
       \l_@@_min_state_int { 1 } { \l_@@_max_state_int - 1 }
-      { \__array_gset_fast:Nnn \g_@@_state_active_array {##1} { 1 } }
+      { \__intarray_gset_fast:Nnn \g_@@_state_active_intarray {##1} { 1 } }
     \int_set_eq:NN \l_@@_min_active_int \l_@@_max_state_int
     \int_zero:N \l_@@_step_int
     \int_set_eq:NN \l_@@_success_pos_int \l_@@_min_pos_int
@@ -4512,7 +4512,7 @@
 \cs_new:Npn \@@_match_one_active:n #1
   {
     \@@_use_state_and_submatches:nn
-      { \__array_item_fast:Nn \g_@@_thread_state_array {#1} }
+      { \__intarray_item_fast:Nn \g_@@_thread_state_intarray {#1} }
       { \tex_the:D \tex_toks:D #1 }
   }
 %    \end{macrocode}
@@ -4528,11 +4528,11 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_query_set:nnn #1#2#3
   {
-    \__array_gset_fast:Nnn \g_@@_charcode_array
+    \__intarray_gset_fast:Nnn \g_@@_charcode_intarray
       { \l_@@_current_pos_int } {#3}
-    \__array_gset_fast:Nnn \g_@@_catcode_array
+    \__intarray_gset_fast:Nnn \g_@@_catcode_intarray
       { \l_@@_current_pos_int } {#2}
-    \__array_gset_fast:Nnn \g_@@_balance_array
+    \__intarray_gset_fast:Nnn \g_@@_balance_intarray
       { \l_@@_current_pos_int } { \l_@@_balance_int }
     \tex_toks:D \l_@@_current_pos_int {#1}
     \int_incr:N \l_@@_current_pos_int
@@ -4551,10 +4551,10 @@
 \cs_new_protected:Npn \@@_query_get:
   {
     \l_@@_current_char_int
-      = \__array_item_fast:Nn \g_@@_charcode_array
+      = \__intarray_item_fast:Nn \g_@@_charcode_intarray
           { \l_@@_current_pos_int } \scan_stop:
     \l_@@_current_catcode_int
-      = \__array_item_fast:Nn \g_@@_catcode_array
+      = \__intarray_item_fast:Nn \g_@@_catcode_intarray
           { \l_@@_current_pos_int } \scan_stop:
   }
 %    \end{macrocode}
@@ -4575,10 +4575,10 @@
 %<*trace>
     \trace:nnx { regex } { 2 } { state~\int_use:N \l_@@_current_state_int }
 %</trace>
-    \__array_gset_fast:Nnn \g_@@_state_active_array
+    \__intarray_gset_fast:Nnn \g_@@_state_active_intarray
       { \l_@@_current_state_int } { \l_@@_step_int }
     \tex_the:D \tex_toks:D \l_@@_current_state_int
-    \__array_gset_fast:Nnn \g_@@_state_active_array
+    \__intarray_gset_fast:Nnn \g_@@_state_active_intarray
       { \l_@@_current_state_int } { \l_@@_step_int + 1 }
   }
 %    \end{macrocode}
@@ -4594,7 +4594,7 @@
   {
     \int_set:Nn \l_@@_current_state_int {#1}
     \if_int_compare:w
-        \__array_item_fast:Nn \g_@@_state_active_array
+        \__intarray_item_fast:Nn \g_@@_state_active_intarray
           { \l_@@_current_state_int }
                       < \l_@@_step_int
       \tl_set:Nn \l_@@_current_submatches_prop {#2}
@@ -4651,7 +4651,7 @@
         \exp_not:n
           {
             \if_int_compare:w
-                \__array_item_fast:Nn \g_@@_state_active_array
+                \__intarray_item_fast:Nn \g_@@_state_active_intarray
                   { \l_@@_current_state_int }
                 #1
               \exp_after:wN \@@_use_state:
@@ -4683,14 +4683,14 @@
 %
 % \begin{macro}[int]{\@@_store_state:n}
 % \begin{macro}[aux]{\@@_store_submatches:}
-%   Put the given state in \cs{g_@@_thread_state_array}, and increment
+%   Put the given state in \cs{g_@@_thread_state_intarray}, and increment
 %   the length of the array. Also store the current submatch in the
 %   appropriate \tn{toks}.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_store_state:n #1
   {
     \@@_store_submatches:
-    \__array_gset_fast:Nnn \g_@@_thread_state_array
+    \__intarray_gset_fast:Nnn \g_@@_thread_state_intarray
       { \l_@@_max_active_int } {#1}
     \int_incr:N \l_@@_max_active_int
   }
@@ -4781,7 +4781,7 @@
 %
 % \begin{macro}[aux, rEXP]{\@@_replacement_balance_one_match:n}
 %   This expects as an argument the first index of a set of entries in
-%   \cs{g_@@_submatch_begin_array} (and related arrays) which hold the
+%   \cs{g_@@_submatch_begin_intarray} (and related arrays) which hold the
 %   submatch information for a given match. It
 %   can be used within an integer expression to obtain the brace balance
 %   incurred by performing the replacement on that match. This combines
@@ -4811,8 +4811,8 @@
 \cs_new:Npn \@@_replacement_do_one_match:n #1
   {
     \@@_query_range:nn
-      { \__array_item_fast:Nn \g_@@_submatch_prev_array {#1} }
-      { \__array_item_fast:Nn \g_@@_submatch_begin_array {#1} }
+      { \__intarray_item_fast:Nn \g_@@_submatch_prev_intarray {#1} }
+      { \__intarray_item_fast:Nn \g_@@_submatch_begin_intarray {#1} }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -4872,8 +4872,8 @@
 \cs_new:Npn \@@_query_submatch:n #1
   {
     \@@_query_range:nn
-      { \__array_item_fast:Nn \g_@@_submatch_begin_array {#1} }
-      { \__array_item_fast:Nn \g_@@_submatch_end_array {#1} }
+      { \__intarray_item_fast:Nn \g_@@_submatch_begin_intarray {#1} }
+      { \__intarray_item_fast:Nn \g_@@_submatch_end_intarray {#1} }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -4891,19 +4891,19 @@
   {
     \__int_eval:w
       \int_compare:nNnTF
-        { \__array_item_fast:Nn \g_@@_submatch_end_array {#1} } = 0
+        { \__intarray_item_fast:Nn \g_@@_submatch_end_intarray {#1} } = 0
         { 0 }
         {
-          \__array_item_fast:Nn \g_@@_balance_array
-            { \__array_item_fast:Nn \g_@@_submatch_end_array {#1} }
+          \__intarray_item_fast:Nn \g_@@_balance_intarray
+            { \__intarray_item_fast:Nn \g_@@_submatch_end_intarray {#1} }
         }
       -
       \int_compare:nNnTF
-        { \__array_item_fast:Nn \g_@@_submatch_begin_array {#1} } = 0
+        { \__intarray_item_fast:Nn \g_@@_submatch_begin_intarray {#1} } = 0
         { 0 }
         {
-          \__array_item_fast:Nn \g_@@_balance_array
-            { \__array_item_fast:Nn \g_@@_submatch_begin_array {#1} }
+          \__intarray_item_fast:Nn \g_@@_balance_intarray
+            { \__intarray_item_fast:Nn \g_@@_submatch_begin_intarray {#1} }
         }
     \__int_eval_end:
   }
@@ -4961,8 +4961,8 @@
     \cs_set:Npn \@@_replacement_do_one_match:n ##1
       {
         \@@_query_range:nn
-          { \__array_item_fast:Nn \g_@@_submatch_prev_array {##1} }
-          { \__array_item_fast:Nn \g_@@_submatch_begin_array {##1} }
+          { \__intarray_item_fast:Nn \g_@@_submatch_prev_intarray {##1} }
+          { \__intarray_item_fast:Nn \g_@@_submatch_begin_intarray {##1} }
         #1
       }
   }
@@ -5489,7 +5489,7 @@
 %   with a $0$-th submatch (the full match), and one match for each
 %   capturing group: submatches corresponding to the last successful
 %   match are labelled starting at \texttt{zeroth_submatch}. The entry
-%   \cs{l_@@_zeroth_submatch_int} in \cs{g_@@_submatch_prev_array} holds
+%   \cs{l_@@_zeroth_submatch_int} in \cs{g_@@_submatch_prev_intarray} holds
 %   the position at which that match attempt started: this is used for
 %   splitting and replacements.
 %    \begin{macrocode}
@@ -5499,12 +5499,12 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\g_@@_submatch_prev_array, \g_@@_submatch_begin_array, \g_@@_submatch_end_array}
+% \begin{variable}{\g_@@_submatch_prev_intarray, \g_@@_submatch_begin_intarray, \g_@@_submatch_end_intarray}
 %   Hold the place where the match attempt begun and the end-points of each submatch.
 %    \begin{macrocode}
-\__array_new:Nn \g_@@_submatch_prev_array { 65536 }
-\__array_new:Nn \g_@@_submatch_begin_array { 65536 }
-\__array_new:Nn \g_@@_submatch_end_array { 65536 }
+\__intarray_new:Nn \g_@@_submatch_prev_intarray { 65536 }
+\__intarray_new:Nn \g_@@_submatch_begin_intarray { 65536 }
+\__intarray_new:Nn \g_@@_submatch_end_intarray { 65536 }
 %    \end{macrocode}
 % \end{variable}
 %
@@ -5610,15 +5610,15 @@
         {
           \if_int_compare:w \l_@@_start_pos_int < \l_@@_success_pos_int
             \@@_extract:
-            \__array_gset_fast:Nnn \g_@@_submatch_prev_array
+            \__intarray_gset_fast:Nnn \g_@@_submatch_prev_intarray
               { \l_@@_zeroth_submatch_int } { 0 }
-            \__array_gset_fast:Nnn \g_@@_submatch_end_array
+            \__intarray_gset_fast:Nnn \g_@@_submatch_end_intarray
               { \l_@@_zeroth_submatch_int }
               {
-                \__array_item_fast:Nn \g_@@_submatch_begin_array
+                \__intarray_item_fast:Nn \g_@@_submatch_begin_intarray
                   { \l_@@_zeroth_submatch_int }
               }
-            \__array_gset_fast:Nnn \g_@@_submatch_begin_array
+            \__intarray_gset_fast:Nnn \g_@@_submatch_begin_intarray
               { \l_@@_zeroth_submatch_int }
               { \l_@@_start_pos_int }
           \fi:
@@ -5626,12 +5626,12 @@
       #1
       \@@_match:n {#2}
 %<assert>\assert_int:n { \l_@@_current_pos_int = \l_@@_max_pos_int }
-      \__array_gset_fast:Nnn \g_@@_submatch_prev_array
+      \__intarray_gset_fast:Nnn \g_@@_submatch_prev_intarray
         { \l_@@_submatch_int } { 0 }
-      \__array_gset_fast:Nnn \g_@@_submatch_end_array
+      \__intarray_gset_fast:Nnn \g_@@_submatch_end_intarray
         { \l_@@_submatch_int }
         { \l_@@_max_pos_int }
-      \__array_gset_fast:Nnn \g_@@_submatch_begin_array
+      \__intarray_gset_fast:Nnn \g_@@_submatch_begin_intarray
         { \l_@@_submatch_int }
         { \l_@@_start_pos_int }
       \int_incr:N \l_@@_submatch_int
@@ -5727,7 +5727,7 @@
 %   is somewhat a hack: the \meta{key} is a non-negative integer
 %   followed by |<| or |>|, which we use in a comparison to $-1$. At the
 %   end, store the information about the position at which the match
-%   attempt started, in \cs{g_@@_submatch_prev_array}.
+%   attempt started, in \cs{g_@@_submatch_prev_intarray}.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_extract:
   {
@@ -5735,11 +5735,11 @@
       \int_set_eq:NN \l_@@_zeroth_submatch_int \l_@@_submatch_int
       \prg_replicate:nn \l_@@_capturing_group_int
         {
-          \__array_gset_fast:Nnn \g_@@_submatch_begin_array
+          \__intarray_gset_fast:Nnn \g_@@_submatch_begin_intarray
             { \l_@@_submatch_int } { 0 }
-          \__array_gset_fast:Nnn \g_@@_submatch_end_array
+          \__intarray_gset_fast:Nnn \g_@@_submatch_end_intarray
             { \l_@@_submatch_int } { 0 }
-          \__array_gset_fast:Nnn \g_@@_submatch_prev_array
+          \__intarray_gset_fast:Nnn \g_@@_submatch_prev_intarray
             { \l_@@_submatch_int } { 0 }
           \int_incr:N \l_@@_submatch_int
         }
@@ -5752,14 +5752,14 @@
           \fi:
           \__int_eval:w \l_@@_zeroth_submatch_int + ##1 {##2}
         }
-      \__array_gset_fast:Nnn \g_@@_submatch_prev_array
+      \__intarray_gset_fast:Nnn \g_@@_submatch_prev_intarray
         { \l_@@_zeroth_submatch_int } { \l_@@_start_pos_int }
     \fi:
   }
 \cs_new_protected:Npn \@@_extract_b:wn #1 < #2
-  { \__array_gset_fast:Nnn \g_@@_submatch_begin_array {#1} {#2} }
+  { \__intarray_gset_fast:Nnn \g_@@_submatch_begin_intarray {#1} {#2} }
 \cs_new_protected:Npn \@@_extract_e:wn #1 > #2
-  { \__array_gset_fast:Nnn \g_@@_submatch_end_array {#1} {#2} }
+  { \__intarray_gset_fast:Nnn \g_@@_submatch_end_intarray {#1} {#2} }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -5800,7 +5800,7 @@
             \@@_replacement_do_one_match:n { \l_@@_zeroth_submatch_int }
             \@@_query_range:nn
               {
-                \__array_item_fast:Nn \g_@@_submatch_end_array
+                \__intarray_item_fast:Nn \g_@@_submatch_end_intarray
                   { \l_@@_zeroth_submatch_int }
               }
               { \l_@@_max_pos_int }
