--- a/l3experimental/l3str/l3intarray.dtx
+++ b/l3experimental/l3str/l3intarray.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3array.dtx Copyright (C) 2017 The LaTeX3 Project
+%% File: l3intarray.dtx Copyright (C) 2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -27,12 +27,12 @@
 %<package>\@ifpackagelater{expl3}{2017/04/01}
 %<package>  {}
 %<package>  {%
-%<package>    \PackageError{l3array}{Support package l3kernel too old}
+%<package>    \PackageError{l3intarray}{Support package l3kernel too old}
 %<package>      {%
 %<package>        Please install an up to date version of l3kernel\MessageBreak
 %<package>        using your TeX package manager or from CTAN.\MessageBreak
 %<package>        \MessageBreak
-%<package>        Loading l3array will abort!%
+%<package>        Loading l3intarray will abort!%
 %<package>      }%
 %<package>    \endinput
 %<package>  }
@@ -48,7 +48,7 @@
 %
 %
 % \title{^^A
-%   The \textsf{l3array} package: low-level arrays of small integers^^A
+%   The \textsf{l3intarray} package: low-level arrays of small integers^^A
 % }
 %
 % \author{^^A
@@ -66,7 +66,7 @@
 %
 % \begin{documentation}
 %
-% \section{\pkg{l3array} documentation}
+% \section{\pkg{l3intarray} documentation}
 %
 % This module provides no user function: at present it is meant for
 % kernel use only.
@@ -76,7 +76,7 @@
 % $2^{30}-1$).  In contrast to \pkg{l3seq} sequences the access to
 % individual entries is done in constant time rather than linear time,
 % but only integers can be stored.  More precisely, the primitive
-% \tn{fontdimen} stores dimensions but the \pkg{l3array} package
+% \tn{fontdimen} stores dimensions but the \pkg{l3intarray} package
 % transparently converts these from/to integers.  Assignments are always
 % global.
 %
@@ -86,45 +86,45 @@
 %
 % \subsection{Internal functions}
 %
-% \begin{function}{\__array_new:Nn}
+% \begin{function}{\__intarray_new:Nn}
 %   \begin{syntax}
-%     \cs{__array_new:Nn} \meta{array~var} \Arg{size}
+%     \cs{__intarray_new:Nn} \meta{intarray~var} \Arg{size}
 %   \end{syntax}
 %   Evaluates the integer expression \meta{size} and allocates an
-%   \meta{array variable} with that number of (zero) entries.
+%   \meta{integer array variable} with that number of (zero) entries.
 % \end{function}
 %
-% \begin{function}[EXP]{\__array_count:N}
+% \begin{function}[EXP]{\__intarray_count:N}
 %   \begin{syntax}
-%     \cs{__array_count:N} \meta{array~var}
+%     \cs{__intarray_count:N} \meta{intarray~var}
 %   \end{syntax}
-%   Expands to the number of entries in the \meta{array variable}.
+%   Expands to the number of entries in the \meta{integer array variable}.
 %   Contrarily to \cs{seq_count:N} this is performed in constant time.
 % \end{function}
 %
-% \begin{function}{\__array_gset:Nnn, \__array_gset_fast:Nnn}
+% \begin{function}{\__intarray_gset:Nnn, \__intarray_gset_fast:Nnn}
 %   \begin{syntax}
-%     \cs{__array_gset:Nnn} \meta{array~var} \Arg{position} \Arg{value}
-%     \cs{__array_gset_fast:Nnn} \meta{array~var} \Arg{position} \Arg{value}
+%     \cs{__intarray_gset:Nnn} \meta{intarray~var} \Arg{position} \Arg{value}
+%     \cs{__intarray_gset_fast:Nnn} \meta{intarray~var} \Arg{position} \Arg{value}
 %   \end{syntax}
 %   Stores the result of evaluating the integer expression \meta{value}
-%   into the \meta{array variable} at the (integer expression)
-%   \meta{position}.  While \cs{__array_gset:Nnn} checks that the
-%   \meta{position} is between $1$ and the \cs{__array_count:N} and that
+%   into the \meta{integer array variable} at the (integer expression)
+%   \meta{position}.  While \cs{__intarray_gset:Nnn} checks that the
+%   \meta{position} is between $1$ and the \cs{__intarray_count:N} and that
 %   the \meta{value}'s absolute value is at most $2^{30}-1$, the
 %   \enquote{fast} function performs no such bound check.
 %   Assignments are always global.
 % \end{function}
 %
-% \begin{function}[EXP]{\__array_item:Nn, \__array_item_fast:Nn}
+% \begin{function}[EXP]{\__intarray_item:Nn, \__intarray_item_fast:Nn}
 %   \begin{syntax}
-%     \cs{__array_item:Nn} \meta{array~var} \Arg{position}
-%     \cs{__array_item_fast:Nn} \meta{array~var} \Arg{position}
+%     \cs{__intarray_item:Nn} \meta{intarray~var} \Arg{position}
+%     \cs{__intarray_item_fast:Nn} \meta{intarray~var} \Arg{position}
 %   \end{syntax}
 %   Expands to the integer entry stored at the (integer expression)
-%   \meta{position} in the \meta{array variable}.  While
-%   \cs{__array_item:Nn} checks that the \meta{position} is between $1$
-%   and the \cs{__array_count:N}, the \enquote{fast} function performs
+%   \meta{position} in the \meta{integer array variable}.  While
+%   \cs{__intarray_item:Nn} checks that the \meta{position} is between $1$
+%   and the \cs{__intarray_count:N}, the \enquote{fast} function performs
 %   no such bound check.
 % \end{function}
 %
@@ -132,18 +132,18 @@
 %
 % \begin{implementation}
 %
-% \section{\pkg{l3array} implementation}
+% \section{\pkg{l3intarray} implementation}
 %
 %    \begin{macrocode}
 %<*initex|package>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-%<@@=array>
+%<@@=intarray>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage{l3array}{2017/04/01}{}
+\ProvidesExplPackage{l3intarray}{2017/04/01}{}
   {L3 Experimental low-level arrays of small integers}
 %    \end{macrocode}
 %
@@ -207,7 +207,7 @@
         \int_compare:nTF { - \c_max_dim <= \int_abs:n {#3} <= \c_max_dim }
           { \@@_gset_fast:Nnn #1 {#2} {#3} }
           {
-            \__msg_kernel_error:nnxxxx { array } { overflow }
+            \__msg_kernel_error:nnxxxx { intarray } { overflow }
               { \token_to_str:N #1 } {#2} {#3}
               { \int_compare:nNnT {#3} < 0 { - } \__int_value:w \c_max_dim }
             \@@_gset_fast:Nnn #1 {#2}
@@ -215,7 +215,7 @@
           }
       }
       {
-        \__msg_kernel_error:nnxxx { array } { out-of-bounds }
+        \__msg_kernel_error:nnxxx { intarray } { out-of-bounds }
           { \token_to_str:N #1 } {#2} { \@@_count:N #1 }
       }
   }
@@ -236,7 +236,7 @@
     \int_compare:nTF { 1 <= #2 <= \@@_count:N #1 }
       { \@@_item_fast:Nn #1 {#2} }
       {
-        \__msg_kernel_expandable_error:nnnnn { array } { out-of-bounds }
+        \__msg_kernel_expandable_error:nnnnn { intarray } { out-of-bounds }
           { \token_to_str:N #1 } {#2} { \@@_count:N #1 }
         0
       }
@@ -248,13 +248,13 @@
 % \subsection{Messages}
 %
 %    \begin{macrocode}
-\__msg_kernel_new:nnnn { array } { overflow }
+\__msg_kernel_new:nnnn { intarray } { overflow }
   { Integers~larger~than~2^{30}-1~cannot~be~stored~in~arrays. }
   {
     An~attempt~was~made~to~store~#3~at~position~#2~in~the~array~'#1'.~
     The~largest~allowed~value~#4~will~be~used~instead.
   }
-\__msg_kernel_new:nnnn { array } { out-of-bounds }
+\__msg_kernel_new:nnnn { intarray } { out-of-bounds }
   { Access~to~an~entry~beyond~an~array's~bounds. }
   {
     An~attempt~was~made~to~access~or~store~data~at~position~#2~of~the~
