--- a/l3build/l3build.dtx
+++ b/l3build/l3build.dtx
@@ -87,6 +87,7 @@
 \luavarset{sourcefiles}     {\{"*.dtx", "*.ins"\}}{Files to copy for unpacking.}
 \luavarset{textfiles}       {\{"*.md", "*.txt"\}}{Plain text files to send to CTAN as-is.}
 \luavarset{typesetfiles}    {\{"*.dtx"\}} {Files to typeset for documentation.}
+\luavarset{typesetsilent}   {\{~\}}       {Files to typeset before the documentation, not to be shipped out. When the documentation includes compiled documents as images, these most probably belong into this table.}
 \luavarset{typesetsuppfiles}{\{~\}}       {Files needed to support typesetting when \enquote{sandboxed}.}
 \luavarset{unpackfiles}     {\{"*.ins"\}} {Files to run to perform unpacking.}
 \luavarset{unpacksuppfiles} {\{~\}}       {Files needed to support unpacking when \enquote{sandboxed}.}
