\str_lower_case:n, etc., are fully expandable [ci skip]

--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -418,7 +418,7 @@
 %
 % \section{String manipulation}
 %
-% \begin{function}[rEXP, added = 2015-03-01]
+% \begin{function}[EXP, added = 2015-03-01]
 %    {
 %      \str_lower_case:n, \str_lower_case:f,
 %      \str_upper_case:n, \str_upper_case:f
