--- a/l3kernel/l3fp-parse.dtx
+++ b/l3kernel/l3fp-parse.dtx
@@ -1643,7 +1643,7 @@
 % \end{macro}
 %
 % \begin{macro}[rEXP]
-%   {\@@_parse_exponent:N, \@@_parse_exponent_aux:N}
+%   {\@@_parse_exponent:N, \@@_parse_exponent_aux:NN}
 %   This function should be called within an \cs{int_value:w}
 %   expansion (or within an integer expression).  It leaves digits of the
 %   exponent behind it in the input stream, and terminates the expansion
@@ -1657,22 +1657,23 @@
 \cs_new:Npn \@@_parse_exponent:N #1
   {
     \if:w e \if:w E \exp_not:N #1 e \else: \exp_not:N #1 \fi:
-      \exp_after:wN \@@_parse_exponent_aux:N
+      \exp_after:wN \@@_parse_exponent_aux:NN
+      \exp_after:wN #1
       \exp:w
     \else:
       0 \@@_parse_return_semicolon:w #1
     \fi:
     \@@_parse_expand:w
   }
-\cs_new:Npn \@@_parse_exponent_aux:N #1
+\cs_new:Npn \@@_parse_exponent_aux:NN #1#2
   {
-    \if_int_compare:w \if_catcode:w \scan_stop: \exp_not:N #1
-                0 \else: `#1 \fi: > `9 \exp_stop_f:
-      0 \exp_after:wN ; \exp_after:wN e
+    \if_int_compare:w \if_catcode:w \scan_stop: \exp_not:N #2
+                0 \else: `#2 \fi: > `9 \exp_stop_f:
+      0 \exp_after:wN ; \exp_after:wN #1
     \else:
       \exp_after:wN \@@_parse_exponent_sign:N
     \fi:
-    #1
+    #2
   }
 %    \end{macrocode}
 % \end{macro}
