--- a/l3trial/l3benchmark/l3benchmark.dtx
+++ b/l3trial/l3benchmark/l3benchmark.dtx
@@ -147,7 +147,9 @@
 %   read.
 %    \begin{macrocode}
 \bool_new:N \l_benchmark_time_fail_bool
-\sys_if_engine_xetex:T
+\bool_lazy_or:nnF
+  { \sys_if_engine_pdftex_p: }
+  { \sys_if_engine_luatex_p: }
   {
     \cs_if_exist:NTF \shellescape
       {
@@ -161,9 +163,10 @@
     \msg_new:nnnn { benchmark } { no-time }
       { The~l3benchmark~package~failed~to~access~a~clock. }
       {
-        The~XeTeX~engine~provides~no~way~to~access~the~system~time,~
+        The~XeTeX,~pTeX,~and~upTeX~engines~provide~
+        no~way~to~access~the~system~time,~
         hence~making~benchmarking~impossible~without~shell-escape.~
-        Please~use~pdfTeX,~LuaTeX,~or~call~XeTeX~with~the~
+        Please~use~pdfTeX,~LuaTeX,~or~call~other~engines~with~the~
         --shell-escape~option.
       }
     \cs_new_protected:Npn \clock_get:N #1
@@ -245,8 +248,8 @@
 %    \begin{macrocode}
 \sys_if_engine_xetex:T
   {
-    \tl_const:Nx \c_@@_lua_file_tl { \c_job_name_tl . lua }
-    \tl_const:Nx \c_@@_time_file_tl { \c_job_name_tl . timestamp }
+    \tl_const:Nx \c_@@_lua_file_tl { \c_sys_jobname_str . lua }
+    \tl_const:Nx \c_@@_time_file_tl { \c_sys_jobname_str . timestamp }
   }
 %    \end{macrocode}
 % \end{variable}
