--- a/l3experimental/l3str/l3regex.dtx
+++ b/l3experimental/l3str/l3regex.dtx
@@ -5896,23 +5896,23 @@
 % Messages for the preparsing phase.
 %    \begin{macrocode}
 \__msg_kernel_new:nnnn { regex } { trailing-backslash }
-  { Trailing~escape~character~`\iow_char:N\\'. }
+  { Trailing~escape~character~'\iow_char:N\\'. }
   {
     A~regular~expression~or~its~replacement~text~ends~with~
-    the~escape~character~`\iow_char:N\\'.~It~will~be~ignored.
+    the~escape~character~'\iow_char:N\\'.~It~will~be~ignored.
   }
 \__msg_kernel_new:nnnn { regex } { x-missing-rbrace }
-  { Missing~closing~brace~in~`\iow_char:N\\x'~hexadecimal~sequence. }
+  { Missing~closing~brace~in~'\iow_char:N\\x'~hexadecimal~sequence. }
   {
     You~wrote~something~like~
-    `\iow_char:N\\x\{...#1'.~
+    '\iow_char:N\\x\{...#1'.~
     The~closing~brace~is~missing.
   }
 \__msg_kernel_new:nnnn { regex } { x-overflow }
-  { Character~code~`#1'~too~large~in~`\iow_char:N\\x'~hexadecimal~sequence. }
+  { Character~code~'#1'~too~large~in~'\iow_char:N\\x'~hexadecimal~sequence. }
   {
     You~wrote~something~like~
-    `\iow_char:N\\x\{\int_to_Hex:n{#1}\}'.~
+    '\iow_char:N\\x\{\int_to_Hex:n{#1}\}'.~
     The~character~code~#1~is~larger~than~
     the~maximum~value~\int_use:N \c_max_char_int.
   }
@@ -5921,11 +5921,11 @@
 % Invalid quantifier.
 %    \begin{macrocode}
 \__msg_kernel_new:nnnn { regex } { invalid-quantifier }
-  { Braced~quantifier~`#1'~may~not~be~followed~by~`#2'. }
+  { Braced~quantifier~'#1'~may~not~be~followed~by~'#2'. }
   {
-    The~character~`#2'~is~invalid~in~the~braced~quantifier~`#1'.~
-    The~only~valid~quantifiers~are~`*',~`?',~`+',~`{<int>}',~
-    `{<min>,}'~and~`{<min>,<max>}',~optionally~followed~by~`?'.
+    The~character~'#2'~is~invalid~in~the~braced~quantifier~'#1'.~
+    The~only~valid~quantifiers~are~'*',~'?',~'+',~'{<int>}',~
+    '{<min>,}'~and~'{<min>,<max>}',~optionally~followed~by~'?'.
   }
 %    \end{macrocode}
 %
@@ -5936,7 +5936,7 @@
   { Missing~right~bracket~inserted~in~regular~expression. }
   {
     LaTeX~was~given~a~regular~expression~where~a~character~class~
-    was~started~with~`[',~but~the~matching~`]'~is~missing.
+    was~started~with~'[',~but~the~matching~']'~is~missing.
   }
 \__msg_kernel_new:nnnn { regex } { missing-rparen }
   {
@@ -5960,7 +5960,7 @@
 %    \begin{macrocode}
 \__msg_kernel_new:nnnn { regex } { bad-escape }
   {
-    Invalid~escape~`\iow_char:N\\#1'~
+    Invalid~escape~'\iow_char:N\\#1'~
     \@@_if_in_cs:TF { within~a~control~sequence. }
       {
         \@@_if_in_class:TF
@@ -5969,16 +5969,16 @@
       }
   }
   {
-    The~escape~sequence~`\iow_char:N\\#1'~may~not~appear~
+    The~escape~sequence~'\iow_char:N\\#1'~may~not~appear~
     \@@_if_in_cs:TF
       {
         within~a~control~sequence~test~introduced~by~
-        `\iow_char:N\\c\iow_char:N\{'.
+        '\iow_char:N\\c\iow_char:N\{'.
       }
       {
         \@@_if_in_class:TF
           { within~a~character~class~ }
-          { following~a~category~test~such~as~`\iow_char:N\\cL'~ }
+          { following~a~category~test~such~as~'\iow_char:N\\cL'~ }
         because~it~does~not~match~exactly~one~character.
       }
   }
@@ -5987,96 +5987,96 @@
 % Range errors.
 %    \begin{macrocode}
 \__msg_kernel_new:nnnn { regex } { range-missing-end }
-  { Invalid~end-point~for~range~`#1-#2'~in~character~class. }
+  { Invalid~end-point~for~range~'#1-#2'~in~character~class. }
   {
-    The~end-point~`#2'~of~the~range~`#1-#2'~may~not~serve~as~an~
+    The~end-point~'#2'~of~the~range~'#1-#2'~may~not~serve~as~an~
     end-point~for~a~range:~alphanumeric~characters~should~not~be~
     escaped,~and~non-alphanumeric~characters~should~be~escaped.
   }
 \__msg_kernel_new:nnnn { regex } { range-backwards }
-  { Range~`[#1-#2]'~out~of~order~in~character~class. }
+  { Range~'[#1-#2]'~out~of~order~in~character~class. }
   {
-    In~ranges~of~characters~`[x-y]'~appearing~in~character~classes,~
+    In~ranges~of~characters~'[x-y]'~appearing~in~character~classes,~
     the~first~character~code~must~not~be~larger~than~the~second.~
-    Here,~`#1'~has~character~code~\int_eval:n {`#1},~while~
-    `#2'~has~character~code~\int_eval:n {`#2}.
+    Here,~'#1'~has~character~code~\int_eval:n {`#1},~while~
+    '#2'~has~character~code~\int_eval:n {`#2}.
   }
 %    \end{macrocode}
 %
 % Errors related to |\c| and |\u|.
 %    \begin{macrocode}
 \__msg_kernel_new:nnnn { regex } { c-bad-mode }
-  { Invalid~nested~`\iow_char:N\\c'~escape~in~regular~expression. }
+  { Invalid~nested~'\iow_char:N\\c'~escape~in~regular~expression. }
   {
-    The~`\iow_char:N\\c'~escape~cannot~be~used~within~
-    a~control~sequence~test~`\iow_char:N\\c{...}'.~
-    To~combine~several~category~tests,~use~`\iow_char:N\\c[...]'.
+    The~'\iow_char:N\\c'~escape~cannot~be~used~within~
+    a~control~sequence~test~'\iow_char:N\\c{...}'.~
+    To~combine~several~category~tests,~use~'\iow_char:N\\c[...]'.
   }
 \__msg_kernel_new:nnnn { regex } { c-missing-rbrace }
-  { Missing~right~brace~inserted~for~`\iow_char:N\\c'~escape. }
+  { Missing~right~brace~inserted~for~'\iow_char:N\\c'~escape. }
   {
     LaTeX~was~given~a~regular~expression~where~a~
-    `\iow_char:N\\c\iow_char:N\{...'~construction~was~not~ended~
-    with~a~closing~brace~`\iow_char:N\}'.
+    '\iow_char:N\\c\iow_char:N\{...'~construction~was~not~ended~
+    with~a~closing~brace~'\iow_char:N\}'.
   }
 \__msg_kernel_new:nnnn { regex } { c-missing-rbrack }
-  { Missing~right~bracket~inserted~for~`\iow_char:N\\c'~escape. }
+  { Missing~right~bracket~inserted~for~'\iow_char:N\\c'~escape. }
   {
-    A~construction~`\iow_char:N\\c[...'~appears~in~a~
-    regular~expression,~but~the~closing~`]'~is~not~present.
+    A~construction~'\iow_char:N\\c[...'~appears~in~a~
+    regular~expression,~but~the~closing~']'~is~not~present.
   }
 \__msg_kernel_new:nnnn { regex } { c-missing-category }
-  { Invalid~character~`#1'~following~`\iow_char:N\\c'~escape. }
+  { Invalid~character~'#1'~following~'\iow_char:N\\c'~escape. }
   {
-    In~regular~expressions,~the~`\iow_char:N\\c'~escape~sequence~
+    In~regular~expressions,~the~'\iow_char:N\\c'~escape~sequence~
     may~only~be~followed~by~a~left~brace,~a~left~bracket,~or~a~
     capital~letter~representing~a~character~category,~namely~
-    one~of~`ABCDELMOPSTU'.
+    one~of~'ABCDELMOPSTU'.
   }
 \__msg_kernel_new:nnnn { regex } { c-trailing }
-  { Trailing~category~code~escape~`\iow_char:N\\c'... }
+  { Trailing~category~code~escape~'\iow_char:N\\c'... }
   {
-    A~regular~expression~ends~with~`\iow_char:N\\c'~followed~
+    A~regular~expression~ends~with~'\iow_char:N\\c'~followed~
     by~a~letter.~It~will~be~ignored.
   }
 \__msg_kernel_new:nnnn { regex } { u-missing-lbrace }
-  { Missing~left~brace~following~`\iow_char:N\\u'~escape. }
+  { Missing~left~brace~following~'\iow_char:N\\u'~escape. }
   {
-    The~`\iow_char:N\\u'~escape~sequence~must~be~followed~by~
+    The~'\iow_char:N\\u'~escape~sequence~must~be~followed~by~
     a~brace~group~with~the~name~of~the~variable~to~use.
   }
 \__msg_kernel_new:nnnn { regex } { u-missing-rbrace }
-  { Missing~right~brace~inserted~for~`\iow_char:N\\u'~escape. }
+  { Missing~right~brace~inserted~for~'\iow_char:N\\u'~escape. }
   {
     LaTeX~
     \str_if_eq_x:nnTF { } {#2}
       { reached~the~end~of~the~string~ }
-      { encountered~an~escaped~alphanumeric~character `\iow_char:N\\#2'~ }
-    when~parsing~the~argument~of~an~`\iow_char:N\\u\iow_char:N\{...\}'~escape.
+      { encountered~an~escaped~alphanumeric~character '\iow_char:N\\#2'~ }
+    when~parsing~the~argument~of~an~'\iow_char:N\\u\iow_char:N\{...\}'~escape.
   }
 %    \end{macrocode}
 %
 % Errors when encountering the \textsc{posix} syntax |[:...:]|.
 %    \begin{macrocode}
 \__msg_kernel_new:nnnn { regex } { posix-unsupported }
-  { POSIX~collating~element~`[#1 ~ #1]'~not~supported. }
+  { POSIX~collating~element~'[#1 ~ #1]'~not~supported. }
   {
-    The~`[.foo.]'~and~`[=bar=]'~syntaxes~have~a~special~meaning~
+    The~'[.foo.]'~and~'[=bar=]'~syntaxes~have~a~special~meaning~
     in~POSIX~regular~expressions.~This~is~not~supported~by~LaTeX.~
     Maybe~you~forgot~to~escape~a~left~bracket~in~a~character~class?
   }
 \__msg_kernel_new:nnnn { regex } { posix-unknown }
-  { POSIX~class~`[:#1:]'~unknown. }
+  { POSIX~class~'[:#1:]'~unknown. }
   {
-    `[:#1:]'~is~not~among~the~known~POSIX~classes~
-    `[:alnum:]',~`[:alpha:]',~`[:ascii:]',~`[:blank:]',~
-    `[:cntrl:]',~`[:digit:]',~`[:graph:]',~`[:lower:]',~
-    `[:print:]',~`[:punct:]',~`[:space:]',~`[:upper:]',~
-    `[:word:]',~and~`[:xdigit:]'.
+    '[:#1:]'~is~not~among~the~known~POSIX~classes~
+    '[:alnum:]',~'[:alpha:]',~'[:ascii:]',~'[:blank:]',~
+    '[:cntrl:]',~'[:digit:]',~'[:graph:]',~'[:lower:]',~
+    '[:print:]',~'[:punct:]',~'[:space:]',~'[:upper:]',~
+    '[:word:]',~and~'[:xdigit:]'.
   }
 \__msg_kernel_new:nnnn { regex } { posix-missing-close }
-  { Missing~closing~`:]'~for~POSIX~class. }
-  { The~POSIX~syntax~`#1'~must~be~followed~by~`:]',~not~`#2'. }
+  { Missing~closing~':]'~for~POSIX~class. }
+  { The~POSIX~syntax~'#1'~must~be~followed~by~':]',~not~'#2'. }
 %    \end{macrocode}
 %
 % In various cases, the result of a \pkg{l3regex} operation can leave us
@@ -6096,53 +6096,53 @@
 % Error message for unknown options.
 %    \begin{macrocode}
 \__msg_kernel_new:nnnn { regex } { unknown-option }
-  { Unknown~option~`#1'~for~regular~expressions. }
+  { Unknown~option~'#1'~for~regular~expressions. }
   {
-    The~only~available~option~is~`case-insensitive',~toggled~by~
-    `(?i)'~and~`(?-i)'.
+    The~only~available~option~is~'case-insensitive',~toggled~by~
+    '(?i)'~and~'(?-i)'.
   }
 \__msg_kernel_new:nnnn { regex } { special-group-unknown }
-  { Unknown~special~group~`#1~...'~in~a~regular~expression. }
+  { Unknown~special~group~'#1~...'~in~a~regular~expression. }
   {
-    The~only~valid~constructions~starting~with~`(?'~are~
-    `(?:~...~)',~`(?|~...~)',~`(?i)',~and~`(?-i)'.
+    The~only~valid~constructions~starting~with~'(?'~are~
+    '(?:~...~)',~'(?|~...~)',~'(?i)',~and~'(?-i)'.
   }
 %    \end{macrocode}
 %
 % Errors in the replacement text.
 %    \begin{macrocode}
 \__msg_kernel_new:nnnn { regex } { replacement-c }
-  { Misused~`\iow_char:N\\c'~command~in~a~replacement~text. }
+  { Misused~'\iow_char:N\\c'~command~in~a~replacement~text. }
   {
-    In~a~replacement~text,~the~`\iow_char:N\\c'~escape~sequence~
-    can~be~followed~by~one~of~the~letters~`ABCDELMOPSTU'~
-    or~a~brace~group,~not~by~`#1'.
+    In~a~replacement~text,~the~'\iow_char:N\\c'~escape~sequence~
+    can~be~followed~by~one~of~the~letters~'ABCDELMOPSTU'~
+    or~a~brace~group,~not~by~'#1'.
   }
 \__msg_kernel_new:nnnn { regex } { replacement-u }
-  { Misused~`\iow_char:N\\u'~command~in~a~replacement~text. }
+  { Misused~'\iow_char:N\\u'~command~in~a~replacement~text. }
   {
-    In~a~replacement~text,~the~`\iow_char:N\\u'~escape~sequence~
+    In~a~replacement~text,~the~'\iow_char:N\\u'~escape~sequence~
     must~be~~followed~by~a~brace~group~holding~the~name~of~the~
     variable~to~use.
   }
 \__msg_kernel_new:nnnn { regex } { replacement-g }
   {
-    Missing~brace~for~the~`\iow_char:N\\g'~construction~
+    Missing~brace~for~the~'\iow_char:N\\g'~construction~
     in~a~replacement~text.
   }
   {
     In~the~replacement~text~for~a~regular~expression~search,~
-    submatches~are~represented~either~as~`\iow_char:N \\g{dd..d}',~
-    or~`\\d',~where~`d'~are~single~digits.~Here,~a~brace~is~missing.
+    submatches~are~represented~either~as~'\iow_char:N \\g{dd..d}',~
+    or~'\\d',~where~'d'~are~single~digits.~Here,~a~brace~is~missing.
   }
 \__msg_kernel_new:nnnn { regex } { replacement-catcode-end }
   {
-    Missing~character~for~the~`\iow_char:N\\c<category><character>'~
+    Missing~character~for~the~'\iow_char:N\\c<category><character>'~
     construction~in~a~replacement~text.
   }
   {
-    In~a~replacement~text,~the~`\iow_char:N\\c'~escape~sequence~
-    can~be~followed~by~one~of~the~letters~`ABCDELMOPSTU'~representing~
+    In~a~replacement~text,~the~'\iow_char:N\\c'~escape~sequence~
+    can~be~followed~by~one~of~the~letters~'ABCDELMOPSTU'~representing~
     the~character~category.~Then,~a~character~must~follow.~LaTeX~
     reached~the~end~of~the~replacement~when~looking~for~that.
   }
@@ -6151,7 +6151,7 @@
   {
     You~asked~for~a~character~token~with~category~space,~
     and~character~code~0,~for~instance~through~
-    `\iow_char:N\\cS\iow_char:N\\x00'.~
+    '\iow_char:N\\cS\iow_char:N\\x00'.~
     This~specific~case~is~impossible~and~will~be~replaced~
     by~a~normal~space.
   }
