Use 'native' approach for rotation/scaling in (x)dvipdfmx
The PDF cm approach fails to handle any nested material, in particular links:
that is not really addressable at our level. The native approach does have
some oddities (it refueses to do small scalings) but overall having working
nesting is more important.

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -710,7 +710,9 @@
 %
 % \begin{macro}[int]{\@@_literal:n}
 %   Equivalent to \texttt{pdf:content} but favored as the link to
-%   the \pdfTeX{} primitive approach is clearer.
+%   the \pdfTeX{} primitive approach is clearer. Some higher-level operations
+%   use |\tex_special:D| directly: see the later comments on where this is
+%   useful.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_literal:n #1
   { \tex_special:D { pdf:literal~ #1 } }
@@ -727,26 +729,11 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int]{\@@_matrix:n}
-%   With \texttt{(x)dvipdfmx} the matrix has to include a translation
-%   part: that is always zero and so is built in here so that the same
-%   internal interface works for all PDF-related drivers.
-%    \begin{macrocode}
-\cs_new_protected:Npn \@@_matrix:n #1
-  { \@@_literal:n { #1 \c_space_tl 0~0~cm } }
-%    \end{macrocode}
-% \end{macro}
-%
 % \subsubsection{Box operations}
 %
 % \begin{macro}{\@@_box_use_clip:N}
-%   The general method is to save the current location, define a clipping path
-%   equivalent to the bounding box, then insert the content at the current
-%   position and in a zero width box. The \enquote{real} width is then made up
-%   using a horizontal skip before tidying up. There are other approaches that
-%   can be taken (for example using XForm objects), but the logic here shares
-%   as much code as possible and uses the same conversions (and so same
-%   rounding errors) in all cases.
+%   The code here is idential to that for \texttt{pdfmode}: unlike rotation and
+%   scaling, there is no higher-level support in the driver for clipping.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_box_use_clip:N #1
   {
@@ -767,55 +754,41 @@
 % \end{macro}
 %
 % \begin{macro}[int]{\@@_box_use_rotate:Nn}
-% \begin{variable}{\l_@@_cos_fp, \l_@@_sin_fp}
-%   Rotations are set using an affine transformation matrix which therefore
-%   requires sine/cosine values not the angle itself. We store the rounded
-%   values to avoid rounding twice. There are also a couple of comparisons to
-%   ensure that |-0| is not written to the output, as this avoids any issues
-%   with problematic display programs.  Note that numbers are compared to~$0$
-%   after rounding.
+%   Rotating in \texttt{(x)}dvipdmfx can be implemented using either PDF or
+%   driver-specific code. The former approach however is not \enquote{aware}
+%   of the content of boxes: this means that any links embded will not be
+%   adjusted by the rotation. As such, the driver-native approach is prefered:
+%   the code therefore is similar (though not identical) to the \texttt{dvips}
+%   version (notice the rotation angle here is positive). As for
+%   \texttt{dvips}, zero rotation is written as |0| not |-0|.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_box_use_rotate:Nn #1#2
   {
     \@@_scope_begin:
-    \box_set_wd:Nn #1 \c_zero_dim
-    \fp_set:Nn \l_@@_cos_fp { round ( cosd ( #2 ) , 5 ) }
-    \fp_compare:nNnT \l_@@_cos_fp = \c_zero_fp
-      { \fp_zero:N \l_@@_cos_fp }
-    \fp_set:Nn \l_@@_sin_fp { round ( sind ( #2 ) , 5 ) }
-    \@@_matrix:n
+    \tex_special:D
       {
-        \fp_use:N \l_@@_cos_fp \c_space_tl
-        \fp_compare:nNnTF \l_@@_sin_fp = \c_zero_fp
-          { 0~0 }
-          {
-            \fp_use:N \l_@@_sin_fp
-            \c_space_tl
-            \fp_eval:n { -\l_@@_sin_fp }
-          }
-        \c_space_tl
-        \fp_use:N \l_@@_cos_fp
+        x:rotate~
+        \fp_compare:nNnTF {#2} = \c_zero_fp
+          { 0 }
+          { \fp_eval:n { round ( #2 , 5 ) } }
       }
-   \box_use:N #1
-   \@@_scope_end:
+    \box_use:N #1
+    \@@_scope_end:
   }
-\fp_new:N \l_@@_cos_fp
-\fp_new:N \l_@@_sin_fp
 %    \end{macrocode}
-% \end{variable}
 % \end{macro}
 %
 % \begin{macro}{\@@_box_use_scale:Nnn}
-%   The same idea as for rotation but without the complexity of signs and
-%   cosines.
+%   Much the same idea for scaling: use the higher-level driver operation to allow
+%   for box content.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_box_use_scale:Nnn #1#2#3
   {
     \@@_scope_begin:
-    \@@_matrix:n
+    \tex_special:D
       {
+        x:scale~
         \fp_eval:n { round ( #2 , 5 ) } ~
-        0~0~
         \fp_eval:n { round ( #3 , 5 ) }
       }
     \hbox_overlap_right:n { \box_use:N #1 }
