Update a comment [ci skip]

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -64,8 +64,8 @@
 %   \item \texttt{dvipdfmx}: The \texttt{dvipdfmx} program, which works in
 %     conjugation with \pdfTeX{} or \LuaTeX{} in DVI mode.
 %   \item \texttt{dvisvgm}:  The \texttt{dvisvgm} program, which works in
-%     conjugation with \pdfTeX{} or \LuaTeX{} in DVI mode to create SVG
-%     output.
+%     conjugation with \pdfTeX{} or \LuaTeX{} when run in DVI mode as well
+%     as with (u)p\TeX{} and \XeTeX{}.
 %   \item \texttt{xdvipdfmx}: The driver used by \XeTeX{}.
 % \end{itemize}
 %
