--- a/l3trial/l3image/l3image.dtx
+++ b/l3trial/l3image/l3image.dtx
@@ -142,7 +142,7 @@
 %
 % \begin{implementation}
 %
-% \section{\pkg{l3bigint} implementation}
+% \section{\pkg{l3image} implementation}
 %
 %    \begin{macrocode}
 %<*initex|package>
