--- a/l3trial/l3image/l3image.dtx
+++ b/l3trial/l3image/l3image.dtx
@@ -93,7 +93,7 @@
 %   when running the \TeX{} job.
 % \end{function}
 %
-% \begin{function}{__image_read_bb:n}
+% \begin{function}{\__image_read_bb:n}
 %   \begin{syntax}
 %     \cs{__image_read_bb:n} \meta{file}
 %   \end{syntax}
