--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -720,6 +720,7 @@
 \cs_new_protected:Npn \@@_image_getbb_jpg:n #1
   {
     \int_zero:N \l__image_page_int
+    \tl_clear:N \l__image_pagebox_tl
     \tl_clear:N \l_@@_image_attr_tl
     \@@_image_getbb_auxi:n {#1}
   }
@@ -730,6 +731,8 @@
       {
         \int_compare:nNnT \l__image_page_int > 0
           { :P \int_use:N \l__image_page_int }
+        \tl_if_empty:NF \l__image_pagebox_tl
+          { : \l__image_pagebox_tl }
       }
     \@@_image_getbb_auxi:n {#1}
   }
@@ -749,6 +752,8 @@
     \tex_immediate:D \pdftex_pdfximage:D
       \int_compare:nNnT \l__image_page_int > 0
         { page ~ \int_use:N \l__image_page_int }
+      \tl_if_empty:NF \l__image_pagebox_tl
+        { \l__image_pagebox_tl }
       {#1}
     \hbox_set:Nn \l__image_tmp_box
       { \pdftex_pdfrefximage:D \pdftex_pdflastximage:D }
@@ -936,6 +941,7 @@
 \cs_new_protected:Npn \@@_image_getbb_jpg:n
   {
     \int_zero:N \l__image_page_int
+    \tl_clear:N \l__image_pagebox_tl
     \__image_extract_bb:n
   }
 \cs_new_eq:NN \@@_image_getbb_pdf:n \@@_image_getbb_jpg:n
@@ -968,6 +974,8 @@
         pdf:#2~
         \int_compare:nNnT \l__image_page_int > 0
           { page ~ \int_use:N \l__image_page_int \c_space_tl }
+        \tl_if_empty:NF \l__image_pagebox_tl
+          { pagebox ~ \l__image_pagebox_tl \c_space_tl }
         (#1)
       }
   }
@@ -1018,7 +1026,9 @@
 %   {\@@_image_getbb_jpg:n, \@@_image_getbb_pdf:n, \@@_image_getbb_png:n}
 % \begin{macro}[aux]{\@@_image_getbb_auxi:nN}
 % \begin{macro}[aux]{\@@_image_getbb_auxii:nnN, \@@_image_getbb_auxii:VnN}
-% \begin{macro}[aux]{\@@_image_getbb_auxiiii:nNnn, \@@_image_getbb_auxiv:nNnn}
+% \begin{macro}[aux]{\@@_image_getbb_auxiii:nNnn, \@@_image_getbb_auxiv:nNnn}
+% \begin{macro}[aux]{\@@_image_getbb_auxiv:nnNnn, \@@_image_getbb_auxiv:VnNnn}
+% \begin{macro}[aux]{\@@_image_getbb_auxiv:nNnn}
 %   For \texttt{xdvipdfmx}, there are two primitives that allow us to obtain
 %   the bounding box without needing \texttt{extractbb}. The only complexity
 %   is passing the various minor variations to a common core process.
@@ -1040,14 +1050,24 @@
 \cs_new_protected:Npn \@@_image_getbb_auxii:nnN #1#2#3
   { \@@_image_getbb_aux:nNnn {#2} #3 { :P #1 } { page #1 } }
 \cs_generate_variant:Nn \@@_image_getbb_auxii:nnN { V }
-\cs_new_protected:Npn \@@_image_getbb_auxiiii:nNnn #1#2#3#4
+\cs_new_protected:Npn \@@_image_getbb_auxiii:nNnn #1#2#3#4
+  {
+    \tl_if_empty:NTF \l__image_pagebox_tl
+      { \@@_image_getbb_auxiv:VnNnn \l__image_pagebox_tl }
+      { \@@_image_getbb_auxv:nNnn }
+      {#1} #2 {#3} {#4}
+  }
+\cs_new_protected:Npn \@@_image_getbb_auxiv:nnNnn #1#2#3#4#5
+  { \@@_image_getbb_auxv:nNnn {#2} #3 { #4 : #1 } { #5 ~ #1 } }
+\cs_generate_variant:Nn \@@_image_getbb_auxiv:nnNnn { V }
+\cs_new_protected:Npn \@@_image_getbb_auxv:nNnn #1#2#3#4
   {
     \dim_if_exist:cTF { c__image_ #1#3 _urx_dim }
       {
         \dim_set_eq:Nc \l__image_urx_dim { c__image_ #1#3 _urx__dim }
         \dim_set_eq:Nc \l__image_ury_dim { c__image_ #1#3 _ury__dim }
       }
-      { \@@_image_getbb_auxiv:nNnn {#1} #2 {#3} {#4}  }
+      { \@@_image_getbb_auxiv:nNnn {#1} #2 {#3} {#4} }
   }
 \cs_new_protected:Npn \@@_image_getbb_auxiv:nNnn #1#2#3#4
   {
@@ -1060,6 +1080,7 @@
       { \l__image_ury_dim }
   }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
