--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -1028,10 +1028,13 @@
 % \begin{macro}[aux]{\@@_image_getbb_auxii:nnN, \@@_image_getbb_auxii:VnN}
 % \begin{macro}[aux]{\@@_image_getbb_auxiii:nNnn}
 % \begin{macro}[aux]{\@@_image_getbb_auxiv:nnNnn, \@@_image_getbb_auxiv:VnNnn}
-% \begin{macro}[aux]{\@@_image_getbb_auxv:nNnn, \@@_image_getbb_auxvi:nNnn}
+% \begin{macro}[aux]{\@@_image_getbb_auxv:nNnn, \@@_image_getbb_auxv:nNnn}
+% \begin{macro}[aux, EXP]{\@@_image_getbb_pagebox:w}
 %   For \texttt{xdvipdfmx}, there are two primitives that allow us to obtain
 %   the bounding box without needing \texttt{extractbb}. The only complexity
-%   is passing the various minor variations to a common core process.
+%   is passing the various minor variations to a common core process. The
+%   \XeTeX{} primitive omits the text |box| from the page box specification,
+%   so there is also some \enquote{trimming} to do here.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_image_getbb_jpg:n #1
   {
@@ -1058,7 +1061,13 @@
       {#1} #2 {#3} {#4}
   }
 \cs_new_protected:Npn \@@_image_getbb_auxiv:nnNnn #1#2#3#4#5
-  { \@@_image_getbb_auxv:nNnn {#2} #3 { #4 : #1 } { #5 ~ #1 } }
+  {
+    \use:x
+      {
+        \@@_image_getbb_auxv:nNnn {#2} #3 { #4 : #1 }
+          { #5 ~ \@@_image_getbb_pagebox:w #1 }
+      }
+  }
 \cs_generate_variant:Nn \@@_image_getbb_auxiv:nnNnn { V }
 \cs_new_protected:Npn \@@_image_getbb_auxv:nNnn #1#2#3#4
   {
@@ -1079,7 +1088,9 @@
     \dim_const:cn { c__image_ #1#3 _ury__dim }
       { \l__image_ury_dim }
   }
+\cs_new:Npn \@@_image_getbb_pagebox:w #1 box {#1}
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
